Fix rotation Firefox

--- a/wp-content/themes/ledgeredge/assets/css/editor-style.css
+++ b/wp-content/themes/ledgeredge/assets/css/editor-style.css
@@ -1054,7 +1054,7 @@ pre {
   color: var(--color-text-base);
 }
 .connect--social-links-item-link:hover .icon {
-  color: var(--color-quaternary);
+  color: var(--color-text-base);
 }
 
 article {
@@ -2411,6 +2411,7 @@ body.nav-open {
   height: calc(60vw - var(--spacing) - 0px);
   margin: 0 auto;
   margin-bottom: var(--spacing);
+  -moz-transform: rotate(15deg);
 }
 @media (min-width: 50em) {
   .team-item--image {
@@ -2436,6 +2437,7 @@ body.nav-open {
   -webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
           clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
   transform: rotate(15deg);
+  -moz-transform: rotate(0deg);
 }
 .team-item--image__clip img {
   transform: rotate(-15deg);
@@ -2454,6 +2456,7 @@ body.nav-open {
 }
 .team-item:nth-child(3n+2) .team-item--image__clip {
   transform: rotate(-10deg);
+  -moz-transform: rotate(-25deg);
 }
 .team-item:nth-child(3n+2) .team-item--image__clip img {
   transform: rotate(10deg);
