--- a/wp-content/themes/ledgeredge/src/styles/components/_connect.scss
+++ b/wp-content/themes/ledgeredge/src/styles/components/_connect.scss
@@ -55,7 +55,7 @@
 				&:hover {
 					color: var(--color-text-base);
 					.icon {
-						color: var(--color-quaternary);
+						color: var(--color-text-base);
 					}
 				}
 			}
