--- a/wp-content/themes/ledgeredge/src/styles/components/_team.scss
+++ b/wp-content/themes/ledgeredge/src/styles/components/_team.scss
@@ -49,6 +49,7 @@
 			height: calc(60vw - var(--spacing) - 0px);
 			margin: 0 auto;
 			margin-bottom: var(--spacing);
+			-moz-transform: rotate(15deg);
 			@include mq(medium) {
 				width: 100%;
 				height: calc(33.333vw - var(--spacing) - 80px);
@@ -72,6 +73,7 @@
 				background-position: center center;
 				clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
 				transform: rotate(15deg);
+				-moz-transform: rotate(0deg);
 				img {
 					transform: rotate(-15deg);
 					width: 108%;
@@ -93,6 +95,7 @@
 			.team-item--image {
 				&__clip {
 					transform: rotate(-10deg);
+					-moz-transform: rotate(-25deg);
 					img {
 						transform: rotate(10deg);
 					}
